--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
     "moment": "^2.24.0",
     "typescript": "^3.6.3",
     "ts-node": "^8.4.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.3.3",
+    "@typescript-eslint/parser": "^2.3.3",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
