--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         ],
         "lines-between-class-members": "off",
         "padded-blocks": "off",
-        "prefer-destructuring": "off"
+        "prefer-destructuring": "off",
+        "no-console": "off"
     }
 }
