--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,13 @@
         "lines-between-class-members": "off",
         "padded-blocks": "off",
         "prefer-destructuring": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "class-methods-use-this": "off",
+        "import/prefer-default-export": "off",
+        "comma-dangle": "off",
+        "import/no-unresolved": "off",
+        "no-unused-vars": "off",
+        "no-restricted-syntax": "off",
+        "no-case-declarations": "off"
     }
 }
