--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ts-node": "^8.4.1"
   },
   "devDependencies": {
+    "@types/node": "^12.7.12",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "eslint": "^6.5.1",
